Copy edits to new rolling upgrades content

--- a/product_docs/docs/pgd/5/admin-tpa/index.mdx
+++ b/product_docs/docs/pgd/5/admin-tpa/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Automated Installation and Administration with TPA
+title: Automated installation and administration with TPA
 navTitle: With TPA
 ---
 
@@ -23,4 +23,4 @@ This section of the manual covers how to use TPA to deploy and administer EDB Po
 
 The installing section provides an example cluster which will be used in future examples.
 
-Another section shows how to [perform a rolling major version upgrade](upgrading_major_rolling.mdx) with PGD administered by TPA.
+You can also [perform a rolling major version upgrade](upgrading_major_rolling.mdx) with PGD administered by TPA.
