Added some suggested edits from ebgitelman's review.

--- a/product_docs/docs/pgd/5/admin-tpa/upgrading_major_rolling.mdx
+++ b/product_docs/docs/pgd/5/admin-tpa/upgrading_major_rolling.mdx
@@ -95,7 +95,7 @@ SSH into kaboom and use the following command to connect to PGD's `bdrdb` databa
 sudo -u postgres psql bdrdb
 ```
 
-When connected to bdrdb, use the following query:
+When connected to `bdrdb`, use the following query:
 
 ```sql
 SELECT * FROM bdr.group_versions_details;
@@ -445,7 +445,7 @@ Once you start the new server, consider running:
     /usr/lib/postgresql/16/bin/vacuumdb --all --analyze-in-stages
 ```
 
-You can do run the vacuum now. On the target node, run:
+You can run the vacuum now. On the target node, run:
 
 ```bash
 sudo -u postgres /usr/lib/postgresql/16/bin/vacuumdb --all --analyze-in-stages
