First review comments incorporated
Signed-off-by: Dj Walker-Morgan <dj.walker-morgan@enterprisedb.com>

--- a/product_docs/docs/pgd/5/durability/comparing-commit-scopes.mdx
+++ b/product_docs/docs/pgd/5/durability/comparing-commit-scopes.mdx
@@ -31,7 +31,7 @@ We will look at the state of each kind, before and after connectivity is restore
 
 With Group Commit and before restoration, the origin node will have prepared a transaction and wait for confirmations which will not arrive.
 It could timeout and abort the transaction or just wait if the timeout setting is long enough.
-Writes that are recieved by the replicas will be held back if the nodes have prepared transactions from the now-disconnected origin. If there are no prepared transactions, they can continue to recieve writes.
+Writes that are recieved by the replicas will be held back if the nodes have prepared transactions from the now-disconnected origin and they hold conflicting locks. If there are no conflicts, they can continue to recieve writes.
 
 When connectivity is restored, eventually where the origin node aborted the transaction, the prepared transaction on some or all of the replicas will follow in aborting the transaction.
 If there are prepared transactions on all nodes, including the origin, the reconciliation process will commit them. Until that happens, each prepared transaction will be holding locks that will prevent nodes that have resumed writing from overwriting the transaction's writes from other nodes 
@@ -42,7 +42,7 @@ With Synchronous Commit and before restoration, the origin node will have commit
 The client may cancel it or it could timeout, but the transaction stays committed on this node. 
 On the other side of the partition, it's possible that one of the replicas becomes write leader and that segment of the cluster starts writing to the other nodes.
 
-As the network restores, and if the commit hasn't reached the other nodes, it is possible that the writes on the non-origin side could conflict with the writes from the origin node. The default async conflict resolution may choose one over the other and give errors or potential inconsistencies.
+As the network restores, and the commit from the separated origin arrives, it could conflict with the writes from the other nodes. The default async conflict resolution may choose one over the other which could give errors or potential inconsistencies.
 
 #### Group Commit and node crashes
 
