--- a/product_docs/docs/pgd/5/admin-tpa/upgrading_major_rolling.mdx
+++ b/product_docs/docs/pgd/5/admin-tpa/upgrading_major_rolling.mdx
@@ -167,7 +167,7 @@ sudo -u postgres cp /opt/postgres/data/pg_hba.conf /opt/postgres/datanew/
 sudo -u postgres cp -r /opt/postgres/data/conf.d/ /opt/postgres/datanew/
 ```
 
-### Rename the PGDATA directories
+### Swap the data directories
 
 Next, swap the PG15 and PG16 data directories: 
 
