--- a/product_docs/docs/pgd/5/admin-tpa/upgrading_major_rolling.mdx
+++ b/product_docs/docs/pgd/5/admin-tpa/upgrading_major_rolling.mdx
@@ -156,7 +156,7 @@ This command creates a PG16 data directory for configuration, `/opt/postgres/dat
 
 ### Copy configuration for Postgres 15 to Postgres 16
 
-The next step copies the existing configuration (PG15) to the new PG16 data directory.
+The next step copies the configuration files from the old Postgres version (PG15) to the new Postgres version's (PG16). Configuration files reside in each version's data directory.
 
 Copy over the `postgresql.conf`, `postgresql.auto.conf`, and `pg_hba.conf` files and the whole `conf.d` directory:
 
