--- a/product_docs/docs/pgd/5/admin-tpa/upgrading_major_rolling.mdx
+++ b/product_docs/docs/pgd/5/admin-tpa/upgrading_major_rolling.mdx
@@ -124,7 +124,7 @@ sudo systemctl stop postgres
 
 This command halts the server on the current node, in this case, kaboom. Your cluster continues running using the other two nodes.
 
-### Install the new Postgres version
+### Install the new Postgres version and upgrade utility
 
 While still on the target node, kaboom, install the new version of Postgres (PG16) and the upgrade tool:
 
