--- a/product_docs/docs/pgd/5/admin-tpa/upgrading_major_rolling.mdx
+++ b/product_docs/docs/pgd/5/admin-tpa/upgrading_major_rolling.mdx
@@ -154,7 +154,7 @@ sudo -u postgres /usr/lib/postgresql/16/bin/initdb \
 
 This command creates a PG16 data directory for configuration, `/opt/postgres/datanew`.
 
-### Copy configuration for Postgres 15 to Postgres 16
+### Copy configuration from old Postgres to new Postgres
 
 The next step copies the configuration files from the old Postgres version (PG15) to the new Postgres version's (PG16). Configuration files reside in each version's data directory.
 
