--- a/product_docs/docs/pgd/5/admin-tpa/upgrading_major_rolling.mdx
+++ b/product_docs/docs/pgd/5/admin-tpa/upgrading_major_rolling.mdx
@@ -132,7 +132,7 @@ While still on the target node, kaboom, install the new version of Postgres (PG1
 sudo apt install edb-bdr5-pg16 edb-bdr-utilities
 ```
 
-### Initialize Postgres 16
+### Initialize new Postgres version
 
 Make a new data directory for the upgraded Postgres, and give the postgres user ownership of the directory:
 
